# project-models

./: Cargo.toml  config.toml  flake.nix
src/: lib.rs
src/config_models/: clickhouse_config.rs  config.rs  defaults.rs  error.rs  kafka_config.rs  mod.rs  redis_config.rs  server.rs  ssl_config.rs  validation.rs  zerodha_config.rs
src/data_models/: mod.rs
src/data_models/futures_data/: future_type.rs  futures.rs  mod.rs
src/data_models/futures_data/queries/: copy_futures.rs  futures_populate.rs  mod.rs  table_creation.rs
src/data_models/generic_data/: user.rs
src/data_models/hist_data/: hist_data_mod.rs  interval.rs  mod.rs
src/data_models/hist_data/queries/: create_table.rs  mod.rs
src/data_models/instrument_data/: base_exchange.rs  exchange.rs  instrument.rs  instrument_type.rs  mod.rs  segment.rs
src/data_models/instrument_data/queries/: mod.rs  table_creation.rs
src/data_models/tick_data/: index.rs
tests/: clickhouse_tests.rs  correct_clickhouse.rs  correct_redis.rs  error_missing_clickhouse_section.rs  error_missing_required_fields_clickhouse.rs  redis_tests.rs  shared_tests.rs
