[package]
name = "project-models"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.20.3"
serde = { version = "1.0.218", features = ["derive"] }
time = { version = "0.3.39", features = ["macros", "formatting", "parsing", "serde"] }
toml = "0.8.20"

[dev-dependencies]
ctor = "0.4.0"
tempfile = "3.17.1"

