[package]
name = "project-models"
version = "0.1.0"
edition = "2021"

[dependencies]
clickhouse = { version = "0.13.1", features = ["time"] }
kiteticker-async = { git = "https://github.com/SPRAGE/kiteticker-async", branch = "serialize", version = "0.1.1" }
once_cell = "1.20.3"
redis = "0.29.1"
redis-derive = "0.1.7"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
time = { version = "0.3.39", features = ["macros", "formatting", "parsing", "serde"] }
toml = "0.8.20"

[dev-dependencies]
ctor = "0.4.0"
tempfile = "3.17.1"
